--- a/style.css
+++ b/style.css
@@ -55,3 +55,19 @@
 .space{
     padding-left: 50px;
 }
+
+@media (max-width: 499px) {
+    .first-layer{
+        width: 300px;
+        height: 150px;
+    }
+
+    .second-layer{
+        width: 250px;
+        height: 100px;
+    }
+
+    .display-stopwatch{
+        font-size: 50px;
+    }
+}
